--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,22 @@ form{
     flex-direction: column; */
 }
 
-.body{
+#mainBod{
     flex: 5;
     background-color: var(--main-bg-color);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.bookCards{
+    border: black 2px solid;
+    background-color: var(--card-color);
+    font-size: 15px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
