--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,8 @@ form{
     background-color: var(--main-bg-color);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+    padding: 10px;
 }
 
 .bookCards{
@@ -66,10 +68,13 @@ form{
     background-color: var(--card-color);
     font-size: 15px;
     font-weight: bold;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
     justify-content: center;
+    justify-items: center;
     align-items: center;
+    align-items: center;
+    gap: 10px;
 }
 
 
